<resources>
    <string name="app_name">ekar Demo</string>
    <string name="title_activity_maps">ekar</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string name="ok">Ok</string>
    <string name="next">Next</string>
    <string name="please_identify_the_unreporte_n_damage_area">Please identify the unreporte \n damage area</string>
    <string name="ekar">ekar</string>
    <string name="back_side">Back Side</string>
    <string name="left_side">Left Side</string>
    <string name="front_side">Front Side</string>
    <string name="right_side">Right Side</string>
    <string name="comment">Comment</string>

    <string name="alert_back_img_missing">Please choose back Image</string>
    <string name="alert_left_img_missing">Please choose left Image</string>
    <string name="alert_right_img_missing">Please choose right Image</string>
    <string name="alert_front_img_missing">Please choose front Image</string>
    <string name="complint_accepted">Complaint Accepted</string>
    <string name="failed">Failed!</string>
    <string name="data">data</string>
    <string name="empty_alert">This field should not be empty</string>
    <string name="pick_from_gallery">Select image from gallery</string>
    <string name="pick_from_camera">Capture image from camera</string>
    <string name="pick_img">Choose Image</string>


</resources>
