<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="start"
            app:title="@string/ekar"
            app:titleTextColor="@android:color/white"
            app:navigationIcon="@drawable/ic_arrow_back_white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:id="@+id/scrool_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:fadingEdge="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#10000000">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/size_20"
                    android:gravity="center"
                    android:layout_margin="@dimen/margin_16"
                    android:text="@string/please_identify_the_unreporte_n_damage_area">
                </TextView>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16">


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:orientation="horizontal" android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="2">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/front_btn"
                            android:orientation="vertical"  android:layout_width="@dimen/width_0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/front_img"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/ic_launcher_background">

                            </androidx.appcompat.widget.AppCompatImageView>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/txt_size_14"
                                android:gravity="center"
                                android:layout_margin="@dimen/margin_16"
                                android:text="@string/front_side">
                            </TextView>

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <View
                            android:layout_width="@dimen/size_one"
                            android:layout_height="match_parent"
                            android:background="#30000000"
                            android:layout_marginTop="@dimen/margin_16"
                            >

                        </View>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/back_btn"
                            android:orientation="vertical"  android:layout_width="@dimen/width_0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/back_img"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/ic_launcher_background">

                            </androidx.appcompat.widget.AppCompatImageView>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/txt_size_14"
                                android:gravity="center"
                                android:layout_margin="@dimen/margin_16"
                                android:text="@string/back_side">
                            </TextView>

                        </androidx.appcompat.widget.LinearLayoutCompat>


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_one"
                        android:background="@color/divider"
                        android:layout_marginStart="@dimen/vertical_devider_margin"
                        android:layout_marginLeft="@dimen/vertical_devider_margin"
                        android:layout_marginEnd="@dimen/vertical_devider_margin"
                        android:layout_marginRight="@dimen/vertical_devider_margin">
                    </View>


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/left_btn"
                        android:orientation="horizontal" android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="2">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:orientation="vertical"  android:layout_width="@dimen/width_0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="@dimen/margin_16">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/left_img"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/ic_launcher_background">

                            </androidx.appcompat.widget.AppCompatImageView>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/txt_size_14"
                                android:gravity="center"
                                android:layout_margin="@dimen/margin_16"
                                android:text="@string/left_side">
                            </TextView>

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <View
                            android:layout_width="@dimen/size_one"
                            android:layout_height="match_parent"
                            android:background="@color/divider"
                            android:layout_marginBottom="@dimen/vertical_devider_margin">

                        </View>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/right_btn"
                            android:orientation="vertical"  android:layout_width="@dimen/width_0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="@dimen/margin_16">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/right_img"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/ic_launcher_background">

                            </androidx.appcompat.widget.AppCompatImageView>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/txt_size_14"
                                android:gravity="center"
                                android:layout_margin="@dimen/margin_16"
                                android:text="@string/right_side">
                            </TextView>

                        </androidx.appcompat.widget.LinearLayoutCompat>


                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.cardview.widget.CardView>s
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:gravity="start"
                android:layout_margin="@dimen/margin_16"
                android:text="@string/comment">
            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/cmd_txt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/field_height"
                    android:gravity="start"
                    android:padding="@dimen/padding_8"
                    >

                </androidx.appcompat.widget.AppCompatEditText>
            </androidx.cardview.widget.CardView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_24"
                android:text="@string/next"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_gravity="center">

            </androidx.appcompat.widget.AppCompatButton>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

